# esp32-firmware

./: README.md
esp32-blinky/: Cargo.toml  build.rs
esp32-blinky/.cargo/: config.toml
esp32-blinky/src/: main.rs
esp32-servo/: Cargo.toml
esp32-servo/.cargo/: config.toml
esp32-servo/simulation/: diagram.json  wokwi.toml
esp32-servo/src/: main.rs
esp32-wifi/: Cargo.toml  build.rs
esp32-wifi/.cargo/: config.toml
esp32-wifi/src/: main.rs
