[package]
name = "rust_project_esp32c3"
version = "0.1.0"
authors = ["Loi Dinh <loidinh.git@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"


[features]
default = [
    "esp32c3",
    "jtag",
    "log",
    "embassy",
    "wifi",
]

log = [
    "dep:log",
    "esp-hal/log",
    "esp-println/log",
    "esp-backtrace/println",
    "embassy-executor?/log",
    "esp-wifi?/log",
]

jtag = ["esp-println/jtag-serial"]
uart = ["esp-println/uart"]

esp32c3 = ["esp-hal/esp32c3", "esp-println/esp32c3", "esp-backtrace/esp32c3", "esp-wifi?/esp32c3", "esp-hal-embassy?/esp32c3"]
#esp32c6 = ["esp-hal/esp32c6", "esp-println/esp32c6", "esp-backtrace/esp32c6", "esp-wifi?/esp32c6", "esp-hal-embassy?/esp32c6"]

embassy = [
    "esp-hal-embassy",
    "embassy-executor",
    "embassy-time",
    "embassy-executor/task-arena-size-20480"
]

wifi = [
    "esp-wifi",
    "esp-wifi/embassy-net",
    "embassy-net",
]

[dependencies]
static_cell = { version = "2.1.0", features = ["nightly"] }
esp-alloc = { version = "0.4.0" }
esp-hal = { version = "0.20.1" }
esp-println = { version = "0.11.0", default-features = false, features = ["critical-section", "colors"] }
esp-backtrace = { version = "0.14.1", features = ["panic-handler", "exception-handler"] }

defmt = { version = "0.3", optional = true }
log = { version = "0.4", optional = true }

esp-hal-embassy = { version = "0.3", features = ["integrated-timers"], optional = true }
embassy-executor = { version = "0.6", package = "embassy-executor", features = ["arch-riscv32"], optional = true }
embassy-time = { version = "0.3", optional = true }

esp-wifi = { version = "0.9", default-features = false, features = [
    "wifi", "ipv4", "tcp", "udp", "icmp", "igmp", "dns", "dhcpv4"], optional = true }
embassy-net = { version = "0.4", features = ["tcp", "udp", "dhcpv4", "medium-ethernet"], optional = true }
embedded-io-async = "0.6.1"